fix tls and key repository

--- a/_examples/Makefile
+++ b/_examples/Makefile
@@ -33,6 +33,7 @@ run:
 	MQ_MANAGER=QM1 \
 	MQ_HOST=localhost \
 	MQ_PORT=1414 \
+	MQ_TLS=false \
 	MQ_CHANNEL=DEV.APP.SVRCONN \
 	MQ_GET_Q=DEV.QUEUE.2 \
 	MQ_BROWSE_Q=DEV.QUEUE.1 \
